OutOfMemory exception fixed by extending perm memory size in pom.xml
git-svn-id: https://svn.webgres.cz/svn/poptavka@449 61682b0c-635e-44ba-a85b-d27e7dc34134